--- a/config/dynamic_fps.pw.toml
+++ b/config/dynamic_fps.pw.toml
@@ -3,6 +3,6 @@ filename = "dynamic_fps.json"
 side = "client"
 
 [download]
-url = "https://luminamodpack.netlify.app/cdn/dynamic_fps.json"
+url = "https://cdn.jsdelivr.net/gh/Lumina-CC/modpack@master/cdn/dynamic_fps.json"
 hash-format = "sha1"
 hash = "5ba4f81e84b25760c0585ec5249da100268fbb17"
