--- a/mods/modernfix.pw.toml
+++ b/mods/modernfix.pw.toml
@@ -1,6 +1,6 @@
 name = "ModernFix"
 filename = "modernfix-fabric-5.19.0+mc1.20.1.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/nmDcB62a/versions/ZYnwHpym/modernfix-fabric-5.19.0%2Bmc1.20.1.jar"
