--- a/mods/indium.pw.toml
+++ b/mods/indium.pw.toml
@@ -11,3 +11,6 @@ hash = "a2de9ba15f155b09626995ad58b0e23803b05fe6"
 [update.modrinth]
 mod-id = "Orvt0mRa"
 version = "gofbpynL"
+
+[option]
+optional = true
