--- a/mods/amendments.pw.toml
+++ b/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "Amendments"
-filename = "amendments-1.20-1.2.8-fabric.jar"
+filename = "amendments-1.20-1.2.12-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/Fk0Km5bb/amendments-1.20-1.2.8-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/jJplEQRv/amendments-1.20-1.2.12-fabric.jar"
 hash-format = "sha1"
-hash = "38b6fbbceae07eb13eeff51b2671d4b1e7d858e1"
+hash = "ce503e3b05684abfcc886a5174def22867005f90"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "Fk0Km5bb"
+version = "jJplEQRv"
