--- a/mods/chipped.pw.toml
+++ b/mods/chipped.pw.toml
@@ -1,13 +1,13 @@
 name = "Chipped"
-filename = "Chipped-fabric-1.20.1-3.0.6.jar"
+filename = "chipped-fabric-1.20.1-3.0.7.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/BAscRYKm/versions/Fy1PKYtc/Chipped-fabric-1.20.1-3.0.6.jar"
+url = "https://cdn.modrinth.com/data/BAscRYKm/versions/pwyEaKDs/chipped-fabric-1.20.1-3.0.7.jar"
 hash-format = "sha1"
-hash = "96f392370790ff17d48270b7473b1578d4b0e2fe"
+hash = "add35e79f6a930825e4dbe77d5d0468fb96c533f"
 
 [update]
 [update.modrinth]
 mod-id = "BAscRYKm"
-version = "Fy1PKYtc"
+version = "pwyEaKDs"
