--- a/mods/corn-delight-fabric.pw.toml
+++ b/mods/corn-delight-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Corn Delight [Fabric/Quilt]"
-filename = "corndelight-1.20.1-1.1.2.jar"
+filename = "corndelight-1.20.1-1.1.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LbZWy6od/versions/CzFoxUXy/corndelight-1.20.1-1.1.2.jar"
+url = "https://cdn.modrinth.com/data/LbZWy6od/versions/bcPpqoz1/corndelight-1.20.1-1.1.4.jar"
 hash-format = "sha1"
-hash = "a59dd83d31a73899ca8972e1f5c9ffa6e0479dbd"
+hash = "236a2849fd7d32420e2e872192d2aa631e195cae"
 
 [update]
 [update.modrinth]
 mod-id = "LbZWy6od"
-version = "CzFoxUXy"
+version = "bcPpqoz1"
