--- a/mods/distant-friends.pw.toml
+++ b/mods/distant-friends.pw.toml
@@ -1,13 +1,13 @@
 name = "Distant Friends"
-filename = "DistantFriends-fabric-1.20.1-0.5.4.jar"
+filename = "DistantFriends-fabric-1.20.1-0.5.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/CDaJ8xGu/versions/7hOnBq3Z/DistantFriends-fabric-1.20.1-0.5.4.jar"
+url = "https://cdn.modrinth.com/data/CDaJ8xGu/versions/ElfqWcKI/DistantFriends-fabric-1.20.1-0.5.5.jar"
 hash-format = "sha1"
-hash = "737ac97d3ea253dca68d3ea500f29bfed270b002"
+hash = "76e7c0936713645d06804d1f9ab8be2a94b4e23e"
 
 [update]
 [update.modrinth]
 mod-id = "CDaJ8xGu"
-version = "7hOnBq3Z"
+version = "ElfqWcKI"
