--- a/mods/dynamic-fps.pw.toml
+++ b/mods/dynamic-fps.pw.toml
@@ -1,16 +1,16 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.6.3+minecraft-1.20.0-fabric.jar"
+filename = "dynamic-fps-3.7.6+minecraft-1.20.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/GtitXgiZ/dynamic-fps-3.6.3%2Bminecraft-1.20.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/l1WIlBBy/dynamic-fps-3.7.6%2Bminecraft-1.20.0-fabric.jar"
 hash-format = "sha1"
-hash = "ab03253b89bd8275c9b187126438a7400930f128"
+hash = "948837e629b7536e6ea491e569319afaff91a6f4"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "GtitXgiZ"
+version = "l1WIlBBy"
 
 [option]
 optional = true
