--- a/mods/embeddedcomputer.pw.toml
+++ b/mods/embeddedcomputer.pw.toml
@@ -1,13 +1,13 @@
 name = "Embedded Computer"
-filename = "lcc-additions-0.2.jar"
+filename = "embeddedcomputer-0.3.0-beta.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/X41LBcSD/versions/mja2AosW/lcc-additions-0.2.jar"
+url = "https://cdn.modrinth.com/data/X41LBcSD/versions/YcOuhmN9/embeddedcomputer-0.3.0-beta.1.jar"
 hash-format = "sha1"
-hash = "0b5f39def6945260728a8036a1d9c36702962c48"
+hash = "8a7a12de37ccb51c1d473cb2b6a1dc6e4acbdbf9"
 
 [update]
 [update.modrinth]
 mod-id = "X41LBcSD"
-version = "mja2AosW"
+version = "YcOuhmN9"
