--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Language Kotlin"
-filename = "fabric-language-kotlin-1.11.0+kotlin.2.0.0.jar"
+filename = "fabric-language-kotlin-1.12.3+kotlin.2.0.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/afsFajDC/fabric-language-kotlin-1.11.0%2Bkotlin.2.0.0.jar"
+url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/B0fZidZi/fabric-language-kotlin-1.12.3%2Bkotlin.2.0.21.jar"
 hash-format = "sha1"
-hash = "4f5b3f0d773c4cc9e79d2f5ede3a637e78737f6d"
+hash = "54cd3900a904b81bd24c4a35b6577a2ac197b51a"
 
 [update]
 [update.modrinth]
 mod-id = "Ha28R6CL"
-version = "afsFajDC"
+version = "B0fZidZi"
