--- a/mods/more-delight.pw.toml
+++ b/mods/more-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "More Delight - Farmer's Delight"
-filename = "moredelight-1.2.2-1.20.1-fabric.jar"
+filename = "moredelight-24.09.27-1.20-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/znHQQtuU/versions/HalNvD5e/moredelight-1.2.2-1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/znHQQtuU/versions/zst5fZig/moredelight-24.09.27-1.20-fabric.jar"
 hash-format = "sha1"
-hash = "e8182853b6f02dae69ca841812a12d6b3516d24a"
+hash = "573620e5db4ee627c0af313b44d8b2cf2773ef18"
 
 [update]
 [update.modrinth]
 mod-id = "znHQQtuU"
-version = "HalNvD5e"
+version = "zst5fZig"
