--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,13 +1,13 @@
 name = "Roughly Enough Items (REI)"
-filename = "RoughlyEnoughItems-12.1.740-fabric.jar"
+filename = "RoughlyEnoughItems-12.1.785-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nfn13YXA/versions/pRJse6co/RoughlyEnoughItems-12.1.740-fabric.jar"
+url = "https://cdn.modrinth.com/data/nfn13YXA/versions/nYcMSS03/RoughlyEnoughItems-12.1.785-fabric.jar"
 hash-format = "sha1"
-hash = "b9db999ceb21575e2399c6ecaee1259aa29bf6c5"
+hash = "2423e7bbc26384e0f927ab81b513787b2d06b52e"
 
 [update]
 [update.modrinth]
 mod-id = "nfn13YXA"
-version = "pRJse6co"
+version = "nYcMSS03"
