--- a/mods/sophisticated-core-(unofficial-fabric-port).pw.toml
+++ b/mods/sophisticated-core-(unofficial-fabric-port).pw.toml
@@ -1,13 +1,13 @@
 name = "Sophisticated Core (Unofficial Fabric port)"
-filename = "sophisticatedcore-0.5.109+mc1.20.1-SNAPSHOT-build.104.jar"
+filename = "sophisticatedcore-1.20.1-0.6.34.39.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9jxwkYQL/versions/w3jSSP5U/sophisticatedcore-0.5.109%2Bmc1.20.1-SNAPSHOT-build.104.jar"
+url = "https://cdn.modrinth.com/data/9jxwkYQL/versions/UfB5fh4Y/sophisticatedcore-1.20.1-0.6.34.39.jar"
 hash-format = "sha1"
-hash = "6115c54fd7eec1f440494931726ae0034af407af"
+hash = "e633fd6f237d8b96648cdd92e2340e4cda76f23e"
 
 [update]
 [update.modrinth]
 mod-id = "9jxwkYQL"
-version = "w3jSSP5U"
+version = "UfB5fh4Y"
