--- a/mods/storage-delight.pw.toml
+++ b/mods/storage-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "Storage Delight - Farmer's Delight"
-filename = "storagedelight-2024.07.23-1.20.1-fabric.jar"
+filename = "storagedelight-24.09.11-1.20-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/mt8ZPDWt/storagedelight-2024.07.23-1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/LlkAI45V/storagedelight-24.09.11-1.20-fabric.jar"
 hash-format = "sha1"
-hash = "35720b6386cfae24842d5cb02bbabf5a1a3be4f5"
+hash = "ab6ed9a95bd5324fb2c8326dbac76fe7250b7ffb"
 
 [update]
 [update.modrinth]
 mod-id = "LTTvOp5L"
-version = "mt8ZPDWt"
+version = "LlkAI45V"
